# task_3

./: README.md
src/task_3/: CMakeLists.txt  package.xml  setup.py
src/task_3/launch/: detect_aruco.py  detect_aruco_in_gazebo.launch.py
src/task_3/src/: detect_aruco.cpp
src/task_3/task_3/: detect_aruco.py
